# Magic-Clusters-Cu-Hydrogen-Storage

./: .flake8  .gitignore  Makefile  README.md  config.py  create_knowledge_graph.py  data_utils.py  dataloader.py  dataloader_feautre_kg_only.py  explain.py  generate_rotations.py  model.py  print_results.py  pyproject.toml  requirements.txt  summary_grouped_bar.py  test_attention.py  train.py  train_image_feature_kg.py  visualize_results.py
ablation/: measure_inference_time.py  model_resnet_only.py  model_schnet_only.py  model_tabular_only.py  run_all_inference_times.py  train_resnet_only.py  train_schnet_only.py  train_tabular_only.py
data/: knowledge_graph.json
data/rotated_optimized-structures-with-H2/xyz_files/: R10-H2_rot0.xyz  R10-H2_rot1.xyz  R10-H2_rot2.xyz  R10-H2_rot3.xyz  R10-H2_rot5.xyz  R7-H2_rot0.xyz  R7-H2_rot1.xyz  R7-H2_rot2.xyz  R8-H2_rot0.xyz  R8-H2_rot1.xyz  R8-H2_rot5.xyz  R9-H2_rot0.xyz  R9-H2_rot1.xyz  R9-H2_rot4.xyz  R9-H2_rot5.xyz
data/rotated_optimized-structures/xyz_files/: R10_rot0.xyz  R10_rot1.xyz  R7_rot0.xyz  R7_rot1.xyz  R7_rot2.xyz  R8_rot1.xyz  R8_rot2.xyz  R8_rot4.xyz  R8_rot5.xyz  R9_rot0.xyz  R9_rot2.xyz  R9_rot3.xyz  R9_rot5.xyz
new_data/: Formation_energy-EF.txt  energies.txt  knowledge_graph.json  labels.csv
new_data/rotated_initial-strcutures/xyz_files/: R10-initial_rot0.xyz  R10-initial_rot1.xyz  R10-initial_rot2.xyz  R10-initial_rot3.xyz  R10-initial_rot4.xyz  R10-initial_rot5.xyz  R7-initial_rot0.xyz  R7-initial_rot1.xyz  R7-initial_rot2.xyz  (+15 more)
utils/: create_knowledge_graph.py  data_utils.py  generate_rotations.py
(+20 files in other folders)
