[project]
name = "magic-clusters-cu-hydrogen-storage"
version = "0.1.0"
description = "Multimodal Explainable Artificial Intelligence–Driven Analysis of Quantum Size Effects in Copper Nanoclusters for Hydrogen Storage"
authors = [
    { name = "Mustafa Kurban", email = "kurbanm@ankara.edu.tr" },
    { name = "Can Polat" },
    { name = "Erchin Serpedin" },
    { name = "Hasan Kurban", email = "hkurban@hbku.edu.qa" }
]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "old", "build", "dist", "plots"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88 